# ciscotestautomation-genieparser

./: pyproject.toml
src/genie/libs/parser/nxos/: show_interface.py
